--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@
     .home{
         height: 130vh;
         width: 100%;
-        background: url("images/black.png") no-repeat;
+        background: url("/Images/black.png");
         /*background: #F0F8FF;*/
         background-position: center;
         background-size: cover;
