--- a/style.css
+++ b/style.css
@@ -589,7 +589,7 @@
         font-size: 33px;
     }
     .home {
-        background: url("/Images/black.png");
+        background: url("Images/joshua 640x1136.png");
     }
 }
 
